--- a/02-oop-pillars-and-principles/package.json
+++ b/02-oop-pillars-and-principles/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest",
+    "test": "vitest run --reporter verbose",
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
