--- a/05/package.json
+++ b/05/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "typescript": "5.4.2"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.16"
   }
 }
