--- a/05/package.json
+++ b/05/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest --watch"
   },
   "keywords": [],
   "author": "",
